[tool.poetry]
name = "py-web-module-5-hw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^24.7.1"
requests = "^2.31.0"
httpx = "^0.27.0"
names = "^0.3.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
